--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,4 +1,5 @@
-## Taken from https://github.com/mrtazz/dotfiles/blob/master/tmux.conf
+## Most of these settings came from the book:
+## tmux: Productive Mouse-Free Development by Brian Hogan
 
 # remap prefix to Control + a
 set -g prefix C-a
