--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,67 +1,40 @@
-## Most of these settings came from the book:
-## tmux: Productive Mouse-Free Development by Brian Hogan
+# ----------------------
+# General Settings
+# -----------------------
+# Allow tmux to see 256 colors
+set -g default-terminal "screen-256color"
+set-option -g default-shell /usr/local/bin/zsh
 
-# remap prefix to Control + a
+# ----------------------
+# Key Bindings
+# -----------------------
+# Use C-a as prefix for all tmux commands
 set -g prefix C-a
-unbind C-b
-bind C-a send-prefix
+bind-key a send-prefix # for nested tmux sessions
 
-# go to beginning of line like screen
-bind a send-prefix
+# ----------------------
+# Status Bar
+# -----------------------
+set-option -g status on                # turn the status bar on
+set -g status-utf8 on                  # set utf-8 for the status bar
+set -g status-interval 5               # set update frequencey (default 15 seconds)
+set -g status-justify centre           # center window list for clarity
 
-# remap C-a to quick-switch
-bind-key C-a last-window
+# visual notification of activity in other windows
+setw -g monitor-activity on
+set -g visual-activity on
 
-# No escape delay
-set -sg escape-time 0
+# set color for status bar
+set-option -g status-bg black
+set-option -g status-fg colour63
+set-option -g status-attr dim 
 
-# force a reload of the config file
-unbind r
-bind r source-file ~/.tmux.conf \; display "Reloaded configuration!"
+# set window list colors
+set-window-option -g window-status-fg colour15
+set-window-option -g window-status-bg black
+set-window-option -g window-status-attr dim
 
-# start window&pane numbering at 1 for easier switching
-set -g base-index 1
-setw -g pane-base-index 1
-
-# VIM-like pane navigation
-bind h select-pane -L 
-bind j select-pane -D 
-bind k select-pane -U 
-bind l select-pane -R
-
-# Resize panes with VIM-like keys
-bind -r H resize-pane -L 5 
-bind -r J resize-pane -D 5 
-bind -r K resize-pane -U 5 
-bind -r L resize-pane -R 5
-
-# quick pane cycling
-unbind ^A
-bind ^A select-pane -t :.+
-
-# No mouse mode
-setw -g mode-mouse off
-
-# unicode
-setw -g utf8 on
-set -g status-utf8 on
-
-# status bar settings
-set -g status-justify centre
-set -g status-bg black
-set -g status-fg cyan
-set -g status-left '#h:#[fg=green][#S]'
-set -g status-left-fg white
-set -g status-left-length 50
-set -g status-right-length 50
-set -g status-right "#[fg=cyan]%d %b %R"
-setw -g window-status-current-format "#I:#W"
-setw -g window-status-current-fg red
-setw -g window-status-current-bg black
-set-window-option -g automatic-rename off
-
-# identify activity
-setw -g monitor-activity on 
-
-# default color
-set-option -g default-terminal xterm-256color
+# set active window colors
+set-window-option -g window-status-current-fg colour45
+set-window-option -g window-status-current-bg black
+set-window-option -g window-status-current-attr bright
