--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,9 +1,28 @@
+# Thanks to Mark H. Nichol at http://zanshin.net/2013/09/05/my-tmux-configuration/ for the example .tmux.conf
+
 # ----------------------
 # General Settings
 # -----------------------
 # Allow tmux to see 256 colors
 set -g default-terminal "screen-256color"
 set-option -g default-shell /usr/local/bin/zsh
+
+# shorten command delay
+set -sg escape-time 1
+
+# set window and pane index to 1 (0 by default)
+set-option -g base-index 1
+setw -g pane-base-index 1
+
+# use UTF8
+set -g utf8
+set-window-option -g utf8 on
+
+# set scrollback history to 10000 (10k)
+set -g history-limit 10000
+
+# turn off renaming to command names
+set-option -g allow-rename off
 
 # ----------------------
 # Key Bindings
