Turning off visual bell in tmux. Adding clear statements to tmux windows so that they're nice looking when they first start.

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -24,6 +24,9 @@ set -g history-limit 10000
 # turn off renaming to command names
 set-option -g allow-rename off
 
+# turn off annoying visual bell
+set-option -g visual-bell off
+
 # ----------------------
 # Key Bindings
 # -----------------------
