Updates to tmux settings.

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -24,14 +24,13 @@ set -g history-limit 10000
 # turn off renaming to command names
 set-option -g allow-rename off
 
-# turn off annoying visual bell
-set-option -g visual-bell off
-
 # ----------------------
 # Key Bindings
 # -----------------------
 # Use C-a as prefix for all tmux commands
 set -g prefix C-a
+unbind C-b
+bind-key C-a send-prefix
 bind-key a send-prefix # for nested tmux sessions
 
 # ----------------------
@@ -43,8 +42,11 @@ set -g status-interval 5               # set update frequencey (default 15 secon
 set -g status-justify centre           # center window list for clarity
 
 # visual notification of activity in other windows
+set-option -g visual-bell off
+set -g visual-activity off
+
+# monitor windows for changes (they are marked on the status line)
 setw -g monitor-activity on
-set -g visual-activity on
 
 # set color for status bar
 set-option -g status-bg black
