Add ripgrep, fix little things like the spacing around iterm when you fullscreen with spectacle, and remove the console 'Last Login' message

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -3,9 +3,14 @@
 # ----------------------
 # General Settings
 # -----------------------
+
+# Fix for VIM not auto-refreshing after autofixed linter changes
+set -g focus-events on
+
 # Allow tmux to see 256 colors
 set -g default-terminal "screen-256color"
-set-option -g default-shell /usr/local/bin/zsh
+#set-option -g default-shell /usr/local/bin/zsh
+set -g default-shell $SHELL 
 
 # shorten command delay
 set -sg escape-time 1
@@ -15,8 +20,8 @@ set-option -g base-index 1
 setw -g pane-base-index 1
 
 # use UTF8
-set -g utf8
-set-window-option -g utf8 on
+#set -g utf8
+#set-window-option -g utf8 on
 
 # set scrollback history to 10000 (10k)
 set -g history-limit 10000
@@ -37,7 +42,7 @@ bind-key a send-prefix # for nested tmux sessions
 # Status Bar
 # -----------------------
 set-option -g status on                # turn the status bar on
-set -g status-utf8 on                  # set utf-8 for the status bar
+#set -g status-utf8 on                  # set utf-8 for the status bar
 set -g status-interval 5               # set update frequencey (default 15 seconds)
 set -g status-justify centre           # center window list for clarity
 
@@ -62,3 +67,46 @@ set-window-option -g window-status-attr dim
 set-window-option -g window-status-current-fg colour45
 set-window-option -g window-status-current-bg black
 set-window-option -g window-status-current-attr bright
+
+# ----------------------
+# Copy-Paste Integration
+# -----------------------
+
+# Copy-paste integration
+set -g default-command "reattach-to-user-namespace -l ${SHELL}"
+
+# Use vim keybindings in copy mode
+setw -g mode-keys vi
+
+# Setup 'v' to begin selection as in Vim
+#bind-key -t vi-copy v begin-selection
+#bind-key -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
+
+# Update default binding of `Enter` to also use copy-pipe
+#unbind -t vi-copy Enter
+#bind-key -t vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy"
+
+# Bind ']' to use pbpaste
+bind ] run "reattach-to-user-namespace pbpaste | tmux load-buffer - && tmux paste-buffer"
+
+# ----------------------
+# Enable Mouse Moude
+# -----------------------
+set -g mouse on
+
+# Default scroll-speed is 3
+set -g @scroll-speed-num-lines-per-scroll 5
+
+# List of plugins
+set -g @plugin 'tmux-plugins/tpm'
+#set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g @plugin 'nhdaly/tmux-better-mouse-mode'
+
+# # Other examples:
+# # set -g @plugin 'github_username/plugin_name'
+# # set -g @plugin 'git@github.com/user/plugin'
+# # set -g @plugin 'git@bitbucket.com/user/plugin'
+#
+# # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
+run '~/.tmux/plugins/tpm/tpm'
+
