--- a/.tmuxinator/work.yml
+++ b/.tmuxinator/work.yml
@@ -1,39 +1,8 @@
 # ~/.tmuxinator/work.yml
 
 name: work
-root: ~/
-
-# Optional tmux socket
-# socket_name: foo
-
-# Runs before everything. Use it to start daemons etc.
-# pre: sudo /etc/rc.d/mysqld start
-
-# Runs in each window and pane before window/pane specific commands. Useful for setting up interpreter versions.
-# pre_window: rbenv shell 2.0.0-p247
-
-# Pass command line options to tmux. Useful for specifying a different tmux.conf.
-# tmux_options: -f ~/.tmux.mac.conf
-
-# Change the command to call tmux.  This can be used by derivatives/wrappers like byobu.
-# tmux_command: byobu
-
-# Specifies (by name or index) which window will be selected on project startup. If not set, the first window is used.
-# startup_window: logs
-
-# Controls whether the tmux session should be attached to automatically. Defaults to true.
-# attach: false
-
-# Runs after everything. Use it to attach to tmux with custom options etc.
-# post: tmux -CC attach -t work
+root: ~/source/
 
 windows:
-  - work-log: cd ~/Dropbox/DailyLog/; clear; emacsclient -c WorkLog.org
-  - strategic-plan: cd ~/Dropbox/DailyLog/; clear; emacsclient -c StrategicPlan.org
-  - daily-plan: cd ~/Dropbox/DailyLog/ ; clear; emacsclient -c "$(date +"%m-%d-%Y").org"
-  - inbox: cd ~/Dropbox/DailyLog/; clear; emacsclient -c Inbox.org
-  - git: cd ~/source/dwh/; clear; emacsclient -c --eval '(magit-status "~/source/dwh/")'
-  - source: cd ~/source/dwh/; clear;
-  - build: cd ~/source/dwh/; clear; 
-  - deploy: cd ~/source/dwh/; clear;
-  - remote: cd ~/source/dwh/; clear;
+  - daily:
+    - emacsclient -c ~/Dropbox/Organization/Daily/`date +%Y-%m-%d`.org
